--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
