--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-tabs": "^6.0.2",
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
