--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-tabs": "^6.0.2",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
