blog section with data added

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "aos": "^2.3.4",
+    "express": "^4.18.2",
+    "node": "^21.2.0",
+    "puppeteer": "^21.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
