framer motion added

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "aos": "^2.3.4",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.16",
     "node": "^21.2.0",
     "puppeteer": "^21.6.1",
     "react": "^18.2.0",
