--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "aos": "^2.3.4",
+    "@react-three/drei": "^9.92.4",
+    "@react-three/fiber": "^8.15.12",
     "express": "^4.18.2",
     "framer-motion": "^10.16.16",
     "node": "^21.2.0",
-    "puppeteer": "^21.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
     "react-tabs": "^6.0.2",
+    "react-three-fiber": "^6.0.13",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^1.2.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.159.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
