--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,40 +10,19 @@
     "description": "This is my personal portfolio website.",
     "icons": [
         {
-            "src": "./icon.png",
-            "sizes": "144x144",
-            "type": "image/png",
-            "purpose": "any"
+            "src": "favicon.ico",
+            "sizes": "64x64 32x32 24x24 16x16",
+            "type": "image/x-icon"
         },
         {
-            "src": "./icon.png",
-            "sizes": "196x196",
+            "src": "logo192.png",
             "type": "image/png",
-            "purpose": "any"
+            "sizes": "192x192"
         },
         {
-            "src": "./icon.png",
-            "sizes": "192x192",
+            "src": "logo512.png",
             "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "./icon.png",
-            "sizes": "256x256",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "./icon.png",
-            "sizes": "384x384",
-            "type": "image/png",
-            "purpose": "any"
-        },
-        {
-            "src": "./icon.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any"
+            "sizes": "512x512"
         }
     ]
 }
