--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-responsive-modal": "^6.4.2",
     "react-scroll": "^1.9.0",
     "react-tabs": "^6.0.2",
     "react-three-fiber": "^6.0.13",
